# sigc

./: .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  demo.sh  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
crates/pysigc/: Cargo.toml  pyproject.toml
crates/pysigc/src/: lib.rs
crates/sig_cache/: Cargo.toml  README.md
crates/sig_cache/src/: lib.rs
crates/sig_compiler/: Cargo.toml  README.md
crates/sig_compiler/src/: ast.rs  diagnostics.rs  lib.rs  parser.rs
crates/sig_lsp/: Cargo.toml  README.md
crates/sig_lsp/src/: main.rs
crates/sig_runtime/: Cargo.toml  README.md
crates/sig_runtime/benches/: cache_repro.rs  kernels.rs
crates/sig_runtime/src/: alerts.rs  attribution.rs  audit.rs  backtest.rs  benchmark.rs  config.rs  connectors.rs  connectors_async.rs  constraints.rs  corporate_actions.rs  costs.rs  data.rs  data_quality.rs  engine.rs  factors.rs  incremental.rs  integrations.rs  kernels.rs  lib.rs  market_data.rs  metrics.rs  mmap_data.rs  optimize.rs  panel.rs  parallel.rs  portfolio_opt.rs  regime.rs  reporting.rs  result_store.rs  rigor.rs  risk_models.rs  safety.rs  scheduler.rs  simd_kernels.rs  universe.rs  viz.rs  walk_forward.rs
crates/sig_types/: Cargo.toml  README.md
crates/sig_types/src/: lib.rs
crates/sigc/: Cargo.toml  README.md
crates/sigc/src/: daemon.rs  main.rs
crates/sigc/tests/: integration.rs  leakage.rs  operators.rs  reproducibility.rs  strategies.rs
data/: prices.csv  prices.parquet
deploy/: prometheus.yml
docs/: ARCHITECTURE.md  README.md  ROADMAP.md  build-roadmap.md  language-reference.md
docs/advanced/: cost-models.md  production-features.md  python-integration.md
docs/examples/data/: sample_prices.csv
docs/getting-started/: quickstart.md
docs/guide/: cli-reference.md  data-loading.md  dsl-basics.md
docs/quant-guide/: 01-introduction.md  02-fundamentals.md  03-signals.md  04-language.md  05-backtesting.md  06-risk.md  07-production.md  08-advanced-analytics.md  09-deployment-safety.md  10-language-enhancements.md  11-integrations.md  README.md
docs/reference/: error-messages.md  operators-table.md
docs/tutorials/: mean-reversion.md  momentum-strategy.md
documentation/: README.md  mkdocs.yml  requirements.txt
documentation/docs/: changelog.md  index.md
documentation/docs/advanced/: factor-models.md  incremental-computation.md  index.md  memory-mapping.md  parallel-execution.md  portfolio-optimization.md  regime-detection.md  risk-models.md
documentation/docs/api/: index.md
documentation/docs/backtesting/: attribution.md  benchmark-analysis.md  constraints.md  cost-models.md  index.md  metrics.md  walk-forward.md
documentation/docs/concepts/: architecture.md  backtesting.md  index.md  portfolio-construction.md  signals.md  type-system.md
documentation/docs/contributing/: code-style.md  development-setup.md  documentation.md  index.md  testing.md
documentation/docs/data/: corporate-actions.md  csv.md  data-quality.md  index.md  parquet.md  postgresql.md  s3.md
documentation/docs/getting-started/: first-strategy.md  ide-setup.md  index.md  installation.md  quickstart.md  sample-data.md
documentation/docs/integrations/: alpaca.md  index.md  python.md  streaming.md  vscode.md  yahoo-finance.md
documentation/docs/language/: comments.md  data-section.md  expressions.md  functions.md  index.md  macros.md  params-section.md  portfolio-section.md  signal-section.md  syntax.md
documentation/docs/operators/: arithmetic.md  comparison.md  cross-sectional.md  data-handling.md  index.md  logical.md  portfolio.md  technical.md  time-series.md
documentation/docs/production/: alerting.md  audit-logging.md  configuration.md  daemon-mode.md  docker.md  index.md  monitoring.md  safety-systems.md  scheduling.md
documentation/docs/quant-guide/: 01-introduction.md  02-fundamentals.md  03-signals.md  04-language.md  05-backtesting.md  06-risk.md  07-production.md  08-advanced-analytics.md  09-deployment-safety.md  index.md
documentation/docs/reference/: cli.md  configuration.md  environment-variables.md  error-messages.md  exit-codes.md  index.md  operators-table.md
documentation/docs/strategies/: index.md
documentation/docs/tutorials/: custom-functions.md  index.md  mean-reversion.md  momentum-strategy.md  multi-factor.md  production-deployment.md  python-workflow.md  volatility-strategy.md  walk-forward-optimization.md
documentation/site/: 404.html  index.html  sitemap.xml
documentation/site/advanced/: index.html
documentation/site/api/: index.html
documentation/site/backtesting/: index.html
documentation/site/changelog/: index.html
documentation/site/concepts/: index.html
documentation/site/contributing/: index.html
documentation/site/data/: index.html
documentation/site/getting-started/: index.html
documentation/site/integrations/: index.html
documentation/site/language/: index.html
documentation/site/operators/: index.html
documentation/site/production/: index.html
editors/vscode/: .eslintrc.json  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  sigc-0.1.0.vsix
examples/: combo.sig  commented.sig  meanreversion.sig  momentum.sig  realdata.sig  realdata_parquet.sig
examples/leaky/: README.md  future_return.sig  lead_peek.sig  safe_momentum.sig
scripts/: fetch_data.sh
strategies/: README.md
strategies/mean_reversion/: bollinger_mean_reversion.sig  pairs_trading.sig  sector_rotation.sig  short_term_reversal.sig
strategies/momentum/: cross_sectional_momentum.sig  momentum_crash_protected.sig  momentum_quality.sig  time_series_momentum.sig
strategies/multi_factor/: defensive_equity.sig  fama_french.sig  quality_value_momentum.sig  value_momentum.sig
strategies/statistical_arbitrage/: factor_timing.sig  industry_momentum.sig  residual_momentum.sig
strategies/technical/: breakout.sig  macd_momentum.sig  rsi_strategy.sig  trend_following.sig
strategies/volatility/: low_volatility.sig  variance_risk_premium.sig  vol_of_vol.sig  volatility_timing.sig
(+168 files in other folders)
