[package]
name = "sig_cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Content-addressed caching for deterministic backtesting in sigc"
readme = "README.md"

[dependencies]
sig_types.workspace = true
sled.workspace = true
blake3.workspace = true
rkyv.workspace = true
thiserror.workspace = true
tracing.workspace = true
