[package]
name = "sig_lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sigc-lsp"
path = "src/main.rs"

[dependencies]
sig_types.workspace = true
sig_compiler.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"

# LSP
tower-lsp = "0.20"
