[package]
name = "sig_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language Server Protocol implementation for the sigc DSL"
readme = "README.md"

[[bin]]
name = "sigc-lsp"
path = "src/main.rs"

[dependencies]
sig_types.workspace = true
sig_compiler.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"

# LSP
tower-lsp = "0.20"
