[package]
name = "sig_runtime"
version.workspace = true
edition.workspace = true

[dependencies]
sig_types.workspace = true
sig_cache.workspace = true
sig_compiler.workspace = true
polars.workspace = true
arrow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
rayon.workspace = true
object_store.workspace = true
url.workspace = true
futures.workspace = true
tokio.workspace = true
reqwest.workspace = true
postgres.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "kernels"
harness = false
