[package]
name = "sig_runtime"
version.workspace = true
edition.workspace = true

[dependencies]
sig_types.workspace = true
sig_cache.workspace = true
sig_compiler.workspace = true
polars.workspace = true
arrow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
rayon.workspace = true
object_store.workspace = true
url.workspace = true
futures.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
postgres.workspace = true
sqlx.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6.0"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "kernels"
harness = false
