[package]
name = "sig_types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core type definitions for the sigc quantitative finance DSL"
readme = "README.md"

[dependencies]
rkyv.workspace = true
serde.workspace = true
thiserror.workspace = true
