[package]
name = "sigc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sigc"
path = "src/main.rs"

[dependencies]
sig_types.workspace = true
sig_cache.workspace = true
sig_compiler.workspace = true
sig_runtime.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dirs.workspace = true
nng.workspace = true
serde.workspace = true
serde_json = "1.0"

[dev-dependencies]
polars.workspace = true
