[package]
name = "sigc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A Rust-based quantitative finance platform with a DSL for trading signals and backtesting"
readme = "README.md"

[[bin]]
name = "sigc"
path = "src/main.rs"

[dependencies]
sig_types.workspace = true
sig_cache.workspace = true
sig_compiler.workspace = true
sig_runtime.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dirs.workspace = true
nng.workspace = true
serde.workspace = true
serde_json = "1.0"
num_cpus = "1.16"

[dev-dependencies]
polars.workspace = true
